# modules/products.js
@@ -1,4 +1,5 @@
 const sequelize = require("../db/sequelize");
+const config = require("../config");
 
 exports.getProducts = async (req, res) => {
     try {
@@ -6,8 +7,16 @@ exports.getProducts = async (req, res) => {
     const products = await sequelize.products.findAll({
         where: {
         shop_id: shopId,
+        deleted: 0
         },
+        offset: req.query.offset ? parseInt(req.query.offset) : 0,
+        limit: req.query.limit ? parseInt(req.query.limit) : config.Query.limit,
     });
+
+    if (!products) {
+        return res.status(404).json({ error: "No Products in Shop!" });
+    }
+
      return res.json(products);
     }
     catch (error) {
@@ -23,8 +32,14 @@ exports.getProductById = async (req, res) => {
         where: {
         id: productId,
         shop_id: shopId,
+        deleted: 0
         },
     });
+
+    if (!product) {
+        return res.status(404).json({ error: "Product not found!" });
+    }
+
      return res.json(product);
     }
     catch (error) {
@@ -35,13 +50,16 @@ exports.getProductById = async (req, res) => {
 exports.createProduct = async (req, res) => {
     try {
     const shopId = req.params.shopid;
-    const { name, description, price, quantity } = req.body;
+    const { name, description, price, quantity, banner, images, weight, size } = req.body;
 
     const product = await sequelize.products.create({
         name,
         description,
         price,
         quantity,
+        banner,
+        images,
+        weight,
         shop_id: shopId,
     });
 
@@ -64,11 +82,16 @@ exports.updateProduct = async (req, res) => {
         description,
         price,
         quantity,
+        category_id,
+        banner,
+        images,
+        weight,
         },
         {
         where: {
             id: productId,
             shop_id: shopId,
+            deleted: 0
         },
         }
     );
@@ -85,16 +108,22 @@ exports.deleteProduct = async (req, res) => {
     const shopId = req.params.shopid;
     const productId = req.params.id;
 
-    const product = await sequelize.products.destroy({
+    const product = await sequelize.products.update({
+        deleted: 1,
+    },
+    {
         where: {
         id: productId,
         shop_id: shopId,
+        deleted: 0
         },
     });
 
-    res.json(product);
+    res.status(201).json('Product Deleted! \n' + product);
     }
     catch (error) {
     res.status(500).json({ error: error.message });
     }
 }
+
+
